--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ saved_model_params/**/*
 !saved_model_params/json_files/*.gitkeep
 !saved_model_params/pt_files/*.gitkeep
 !saved_model_params/.gitkeep
+
+# Ignore test.html
+website/test.html
